<resources>
    <string name="app_name">Rajneethi</string>
    <string name="pdialogmsg">Please wait</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="qus1">Electricity scarcity </string>
    <string name="qus2">Water issue</string>
    <string name="qus3">Education </string>
    <string name="qus4">Health</string>
    <string name="qus5">Roads </string>
    <string name="qus6">Crime / Security</string>
    <string name="qus7">Basic Facilities</string>
    <string name="qus8">Transport Service</string>
    <string name="qus9">Other Issues</string>
    <string name="summaryqus1">Important parties and supporting castes them</string>
    <string name="summaryqus2">which party is front leading ? Reason</string>
    <string name="summaryqus3">which candidate is front leading ? Reason</string>
    <string name="summaryqus4">politically related problems , development or caste related problems</string>
    <string name="summaryqus5">people\'s expectations from elected candidate</string>
    <string name="summaryqus6">people\'s expectations from elected candidate of the constituency</string>
    <string name="summaryqus7">people\'s expectations from upcoming government in karnataka</string>
    <string name="summaryqus8">Important expected changes expected by large people in polling booth</string>
    <string name="respondent_info">Respondent Info</string>
    <string name="respondent_name">Name</string>
    <string name="respondent_age">Age</string>
    <string name="respondent_gender">Gender</string>
    <string name="respondent_caste">Caste</string>
    <string name="respondent_phone">Phone Number</string>
    <string name="respondent_education">Education</string>
    <string name="respondent_occupation">Occupation</string>
    <string name="save">Submit</string>
    <string name="gender">Gender</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="caste_name">Caste Name</string>
    <string name="total">Total</string>
    <string name="percentage">Percentage</string>
    <string name="Name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="caste">Caste</string>
    <string name="phone">Phone Number</string>
    <string name="affliation">Party /  NGO Name</string>
    <string name="post">Occupation</string>
    <string name="addvoter">Add Voter</string>
    <string name="whatsapp_select_contact">Select A Contact</string>
    <string name="whatsapp_text_message">Enter A Message</string>
    <string name="whatsapp_image_message">Select A Image (Optional)</string>
    <string name="whatsapp_send_message">Send Message</string>
    <string name="constituency">Constituency</string>
    <string name="state">State</string>
    <string name="assembly_constituency">Assembly Constituency</string>
    <string name="applicant_details">Applicant\'s Details</string>
    <string name="name">Name</string>
    <string name="surename">Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dob">Date of Birth</string>
    <string name="place_of_birth_details">Place of Birth Details</string>
    <string name="district">District</string>
    <string name="village_town">Village/Town</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="relationship_details">Relationship Details</string>
    <string name="relationship_type">Relationship Type</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="husband">Husband</string>
    <string name="realtionshipname">Relationship Name</string>
    <string name="relationsurename">Relationship Surname (If any)</string>
    <string name="fulladdress">Full Address</string>
    <string name="houseno">House/Door number</string>
    <string name="street">Street/Area/Mohalla/Road/Locality</string>
    <string name="post_office">Post office</string>
    <string name="pincode">Pincode</string>
    <string name="taluk">Teshil/Taluka/Mandal/Thana</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="survey">Survey</string>
    <string name="dobsurvey">Date Of Birth(DD-MM-YYYY)</string>
    <string name="educational_qualification">Educational Qualification</string>
    <string name="employment">Employment</string>
    <string name="family_income">Family Income</string>
    <string name="skillpossed">Skill Possessed</string>
    <string name="bpo">Bpo/Telecaller</string>
    <string name="bartender">Bartender</string>
    <string name="beautician">Beautician</string>
    <string name="bouncer">Bouncer</string>
    <string name="car_automibile">Car/Bike/Automobile - service repair</string>
    <string name="caretaker">Caretaker/Nanny</string>
    <string name="carpentry">Carpentry</string>
    <string name="cashier">Cashier</string>
    <string name="construction">Construction/Labourer</string>
    <string name="content_writer">Content Writer</string>
    <string name="cooking">Cooking</string>
    <string name="dance">Dance/Music other music Vocational Skills</string>
    <string name="electrician">Electrician</string>
    <string name="elctronicappliances">Electronic Appliances service Repair</string>
    <string name="farming">Farming</string>
    <string name="fitness">Fitness</string>
    <string name="gardener">Gardener</string>
    <string name="house_cleaning">House Cleaning</string>
    <string name="house_painting">House Painting</string>
    <string name="laundry">Laundry</string>
    <string name="mechanic">Mechanic</string>
    <string name="nurse">Nurse</string>
    <string name="office_assistant">Office Assistant</string>
    <string name="pest_control">Pest Control</string>
    <string name="receptionist">Receptionist</string>
    <string name="security_guard">Security Guard</string>
    <string name="tailor">Tailor</string>
    <string name="teaching">Teaching</string>
    <string name="volunteer">Volunteer on Social service</string>
    <string name="skilssneeded">Skills  Needed</string>
    <string name="benefits_availed">Benefits Availed</string>
    <string name="download">Download Voters Data</string>
    <string name="offline_access">Offline access to all voter records</string>
    <string name="event_title">Event Title :</string>
    <string name="event_date">Event Date :</string>
    <string name="event_time">Event Time :</string>
    <string name="contacts">Contacts :</string>
    <string name="remarks">Enter Booth Name : </string>
    <string name="place">Place : </string>
    <string name="add_event">Add Event</string>
    <string name="activity_supervisorview">Supervisor View</string>
    <string name="activity_stats">Party workers Stats</string>
    <string name="activity_partyWorker">Select Party Worker</string>
    <string name="activity_voterListV">Voter List</string>
    <string name="activity_voterListVDetail">Voter Details</string>
    <string name="event_title1">Username :</string>
    <string name="contacts1">Password :</string>
    <string name="remarks1">Phone Number : </string>
    <string name="place1">Role : </string>
    <string name="event_date1">Project :</string>
    <string name="add_event1">Submit</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="error">Enter Valid Mobile Number</string>
    <string name="retry">Retry</string>
    <string name="constituency_details">Constituency Details</string>
    <string name="title_activity_navigation">navigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_events">Add Events</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="update_event">Update Event</string>
    <string name="sending_sms">Sending sms.......</string>
    <string name="all_fileds_required">All fields are required</string>
    <string name="addUser">Add User</string>
    <string name="selectRole">Select Role</string>
    <string name="supervisor">Supervisor</string>
    <string name="partyWorker">Party Worker</string>
    <string name="Manager">Manager</string>
    <string name="successfullyAdded">Successfully Added</string>
    <string name="userExist">User already exist</string>
    <string name="Survey">SURVEY</string>
    <string name="noInternet">No internet connection</string>
    <string name="Error">Error try again later</string>
    <string-array name="form6">

        <item>Select one</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="analytics">Analytics</string>
    <string name="selectBooth">Select Booth</string>
    <string name="noBoothAllocated"> No booth allocated for you</string>
    <string name="noQuestion">No question found</string>
    <string name="userInput">User Input></string>
    <string name="mobileNumberExist">Sorry Mobile number exists</string>
    <string name="isForm6Required">Is Form 6 Required</string>
    <string name="documents">Documents</string>
    <string name="photograph">Photograph</string>
    <string name="idProof">Id Proof</string>
    <string name="addressProof">Address Proof</string>
    <string name="add">Add</string>
    <string name="allocateBooth">Are sure want to %s booth?</string>
    <string name="deallocateBooth">Are sure want to %s booth?</string>
    <string name="boothSummary">Booth Summary</string>
    <string name="casteEquation">Caste Equation</string>
    <string name="conductSuvey">Conduct Survey</string>
    <string name="successfullyUploaded">Successfully Uploaded</string>
    <string name="noRecordFound">NO data available as of now</string>
    <string name="search">Search</string>
    <string name="syncOnline">Sync online</string>
    <string name="getSurveyData">Get Survey Data</string>
    <string name="uploadImage">Upload Image</string>
    <string name="userManagement">User Management</string>
    <string name="expiredVoters">Expired Voters</string>
    <string name="shiftedVoters">Shifted Voters</string>
    <string name="newVoter">New Voters</string>
    <string name="notAvailable">Not Available</string>
    <string name="notResponding">Not Responding</string>
    <string name="outofStation">Out Of Station</string>
    <string name="mobileCount">Mobile Number Count</string>
    <string name="age30">Age&lt;30</string>
    <string name="age40">Age &lt; 40</string>
    <string name="age50">Age &lt;50</string>
    <string name="ageabove50">Age &gt; 50</string>
    <string name="filter">Filter</string>
    <string name="age18">Age : 18 &#8211;23</string>
    <string name="age24">Age : 24 &#8211;35</string>
    <string name="age36">Age : 36 &#8211;55</string>
    <string name="age55">Age 55+</string>
    <string name="defaultData">All age group</string>
    <string name="gotv">GOTV</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="kannada">Kannada</string>
    <string name="english">English</string>
    <string name="marati">Marati</string>
    <string name="submit">Submit</string>
    <string name="getQuestion">Get Questions</string>
    <string name="logout">Logout</string>
    <string name="changeLanguage">Change Language</string>
    <string name="resync">Reset</string>
    <string name="id">Id</string>
    <string name="pastElection">Past Election History</string>
    <string name="evm">EVM</string>
    <string name="more">More</string>
    <string name="liteUpload">Lite Upload</string>
</resources>