<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pastElection"
        android:title="@string/pastElection"
        app:showAsAction="never" />

    <item
        android:id="@+id/liteUpload"
        android:title="@string/liteUpload"
        app:showAsAction="never" />
    <item
        android:id="@+id/addVoter"
        android:title="@string/addvoter"
        app:showAsAction="never" />
    <item
        android:id="@+id/re_sync"
        android:title="@string/resync"
        app:showAsAction="never" />


    <item
        android:id="@+id/get_questions"
        android:title="@string/getQuestion"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/upload"
        android:icon="@drawable/hard_upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/changeLanguage"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/kannada"
                android:title="@string/kannada"
                app:showAsAction="never" />
            <item
                android:id="@+id/english"
                android:title="@string/english"
                app:showAsAction="never" />
            <item
                android:id="@+id/marati"
                android:title="@string/marati"
                app:showAsAction="never" />
        </menu>


    </item>

    <item
        android:id="@+id/more"
        android:title="@string/more"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/evm"
                android:title="@string/evm" />

        </menu>


    </item>

</menu>