<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_name">

            <EditText
                android:id="@+id/edtxt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_age">

            <EditText
                android:id="@+id/edtxt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/gender" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_caste">

            <EditText
                android:id="@+id/edtxt_caste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_phone">

            <EditText
                android:id="@+id/edtxt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_education">

            <EditText
                android:id="@+id/edtxt_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/respondent_occupation">

            <EditText
                android:id="@+id/edtxt_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/primary"
            android:text="@string/save"
            android:textColor="@color/icons"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>


