<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:ellipsize="end"
        android:padding="@dimen/dp10"
        android:background="@drawable/custom_border"
        android:hint="@string/description"
        android:maxLines="2" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="@dimen/dp10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/camera" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@color/primary"
        android:text="@string/add"
        android:layout_gravity="center"
        android:textColor="@color/icons" />

</LinearLayout>