<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/custom_whatsapp_toolbar"
        layout="@layout/custom_whatsapp_toolbar"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/whatsapp_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary"
        android:gravity="center"
        android:hint="@string/whatsapp_select_contact" />


    <EditText
        android:id="@+id/whatsapp_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary"
        android:gravity="center"
        android:hint="@string/whatsapp_text_message" />


    <Button
        android:id="@+id/whatsapp_image_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:text="@string/whatsapp_image_message"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/whatsapp_selected_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/whatsapp_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/primary_dark"
        android:elevation="5dp"
        android:padding="5dp"
        android:text="@string/whatsapp_send_message"
        android:textColor="@android:color/white" />

</LinearLayout>
