<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:padding="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="text"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"

                android:text="@string/age" />

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="number"
                android:padding="@dimen/dp10" />

            <TextView
                android:layout_width="match_parent"
                android:padding="@dimen/dp10"

                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <EditText
                android:id="@+id/edt_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="text"
                android:padding="@dimen/dp10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"

                android:text="@string/caste" />

            <EditText
                android:id="@+id/edt_caste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="text"
                android:padding="@dimen/dp10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"

                android:text="@string/phone" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="number"
                android:padding="@dimen/dp10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"

                android:text="@string/affliation" />

            <EditText
                android:id="@+id/edt_affliation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="text"
                android:padding="@dimen/dp10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"

                android:text="@string/post" />

            <EditText
                android:id="@+id/edt_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/custom_border"
                android:inputType="text"
                android:padding="@dimen/dp10" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/primary_dark"
                android:text="@string/save"
                android:textColor="@color/icons" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>